--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -3,12 +3,13 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.ykmimi</groupId>
-        <artifactId>springcloudzq-hystrixdashboard</artifactId>
+        <artifactId>springcloudzq-zuul</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>eureka-server</artifactId>
 
     <dependencies>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
@@ -19,6 +20,7 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+
     </dependencies>
 
 </project>
