--- a/product-data-service/pom.xml
+++ b/product-data-service/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.ykmimi</groupId>
-        <artifactId>springcloudzq-hystrixdashboard</artifactId>
+        <artifactId>springcloudzq-zuul</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>product-data-service</artifactId>
