--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,10 @@
             <artifactId>hutool-all</artifactId>
             <version>4.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -56,8 +60,8 @@
         <module>product-data-service</module>
         <module>product-view-service-feign</module>
         <module>utils-boot</module>
+        <module>hystrix-dashboard</module>
         <module>zuul-module</module>
-
     </modules>
 
 </project>
